--- a/nootebooks/01_Fuentes.ipynb
+++ b/nootebooks/01_Fuentes.ipynb
@@ -2,21 +2,249 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83f85eee",
+   "id": "fe1000fb",
    "metadata": {},
    "source": [
-    "#\n"
+    "## Import libraries & load raw data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "34733a13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (28156, 14)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Complaint ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Sub-product</th>\n",
+       "      <th>Issue</th>\n",
+       "      <th>Sub-issue</th>\n",
+       "      <th>State</th>\n",
+       "      <th>ZIP code</th>\n",
+       "      <th>Date received</th>\n",
+       "      <th>Date sent to company</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Company response</th>\n",
+       "      <th>Timely response?</th>\n",
+       "      <th>Consumer disputed?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1291006</td>\n",
+       "      <td>Debt collection</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Communication tactics</td>\n",
+       "      <td>Frequent or repeated calls</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>76119.0</td>\n",
+       "      <td>2015-03-19</td>\n",
+       "      <td>2015-03-19</td>\n",
+       "      <td>Premium Asset Services, LLC</td>\n",
+       "      <td>In progress</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1290580</td>\n",
+       "      <td>Debt collection</td>\n",
+       "      <td>Medical</td>\n",
+       "      <td>Cont'd attempts collect debt not owed</td>\n",
+       "      <td>Debt is not mine</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>77479.0</td>\n",
+       "      <td>2015-03-19</td>\n",
+       "      <td>2015-03-19</td>\n",
+       "      <td>Accounts Receivable Consultants Inc.</td>\n",
+       "      <td>Closed with explanation</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1290564</td>\n",
+       "      <td>Mortgage</td>\n",
+       "      <td>FHA mortgage</td>\n",
+       "      <td>Application, originator, mortgage broker</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>2127.0</td>\n",
+       "      <td>2015-03-19</td>\n",
+       "      <td>2015-03-19</td>\n",
+       "      <td>RBS Citizens</td>\n",
+       "      <td>Closed with explanation</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1291615</td>\n",
+       "      <td>Credit card</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>92592.0</td>\n",
+       "      <td>2015-03-19</td>\n",
+       "      <td>2015-03-19</td>\n",
+       "      <td>Navy FCU</td>\n",
+       "      <td>In progress</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1292165</td>\n",
+       "      <td>Debt collection</td>\n",
+       "      <td>Non-federal student loan</td>\n",
+       "      <td>Cont'd attempts collect debt not owed</td>\n",
+       "      <td>Debt resulted from identity theft</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>43068.0</td>\n",
+       "      <td>2015-03-19</td>\n",
+       "      <td>2015-03-19</td>\n",
+       "      <td>Transworld Systems Inc.</td>\n",
+       "      <td>In progress</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Complaint ID          Product               Sub-product  \\\n",
+       "0           0       1291006  Debt collection                       NaN   \n",
+       "1           1       1290580  Debt collection                   Medical   \n",
+       "2           2       1290564         Mortgage              FHA mortgage   \n",
+       "3           3       1291615      Credit card                       NaN   \n",
+       "4           4       1292165  Debt collection  Non-federal student loan   \n",
+       "\n",
+       "                                      Issue  \\\n",
+       "0                     Communication tactics   \n",
+       "1     Cont'd attempts collect debt not owed   \n",
+       "2  Application, originator, mortgage broker   \n",
+       "3                                     Other   \n",
+       "4     Cont'd attempts collect debt not owed   \n",
+       "\n",
+       "                           Sub-issue State  ZIP code Date received  \\\n",
+       "0         Frequent or repeated calls    TX   76119.0    2015-03-19   \n",
+       "1                   Debt is not mine    TX   77479.0    2015-03-19   \n",
+       "2                                NaN    MA    2127.0    2015-03-19   \n",
+       "3                                NaN    CA   92592.0    2015-03-19   \n",
+       "4  Debt resulted from identity theft   NaN   43068.0    2015-03-19   \n",
+       "\n",
+       "  Date sent to company                               Company  \\\n",
+       "0           2015-03-19           Premium Asset Services, LLC   \n",
+       "1           2015-03-19  Accounts Receivable Consultants Inc.   \n",
+       "2           2015-03-19                          RBS Citizens   \n",
+       "3           2015-03-19                              Navy FCU   \n",
+       "4           2015-03-19               Transworld Systems Inc.   \n",
+       "\n",
+       "          Company response Timely response? Consumer disputed?  \n",
+       "0              In progress              Yes                NaN  \n",
+       "1  Closed with explanation              Yes                NaN  \n",
+       "2  Closed with explanation              Yes                Yes  \n",
+       "3              In progress              Yes                NaN  \n",
+       "4              In progress              Yes                NaN  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load your data (adjust path if needed)\n",
+    "df = pd.read_csv('../data/quejas-clientes.csv')\n",
+    "\n",
+    "# Show shape and the first 5 records\n",
+    "print('Shape:', df.shape)\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ec1b1a7",
+   "metadata": {},
+   "source": [
+    "## Save raw snapshot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ca79ad63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw data snapshot saved at ./data/raw_data_snapshot.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_csv(\"../data/raw_data_snapshot.csv\", index=False)\n",
+    "print(\"Raw data snapshot saved at ./data/raw_data_snapshot.csv\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "consumer_complaint_analysis_final_ML",
+   "display_name": ".venv-final",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.11"
   }
  },
